--- a/minigames/dibujos/style.css
+++ b/minigames/dibujos/style.css
@@ -1,3 +1,14 @@
+@font-face
+{
+    font-family: pipomayu;
+    src:url(pipomayu.TTF);
+}
+
+body
+{
+	font-family:pipomayu;
+}
+
 .draw
 {
 	position:absolute;
