--- a/ColoresPuzzle/css/estiloE.css
+++ b/ColoresPuzzle/css/estiloE.css
@@ -1,5 +1,8 @@
 
-
+section {
+	margin: auto;
+	width: 1000px;
+}
 
 
 h1{
@@ -13,29 +16,29 @@ font-family:pipominu;
 	color: #000000;
 }
 
-section { /* Marcamos como de separados están los dos cuadrados */
-	margin: auto;
-	width: 1000px;
-}
+
+
+
+
 /* Las piezas iniciales */
 #contenedorPiezas{
 	margin:auto;
-	background: #00BFFF;
+	background-image: url("..\images\U.jpg") no-repeat;
 	width: 400px;
 	height: 400px;
 	float: left;
 	margin-left: 20px;
 
-	box-shadow: 0px 0px 10px  2px #87CEFA;
+	box-shadow: 0px 0px 10px  2px #CC0033;
 }
 
 #puzzle { /* Aqui es donde iran las piezas que colocaremos luego */
-	background: #0d3366;
+	background-image: url("..\images\U.jpg") no-repeat;
 	width: 400px;
 	height: 400px;
 	float: right;
 	margin-right: 20px;
-	box-shadow: 0px 0px 10px  2px #87CEFA;
+	box-shadow: 0px 0px 10px  2px #CC0033;
 }
 .contenedorPieza {
 	width: 200px;
@@ -49,7 +52,6 @@ section { /* Marcamos como de separados están los dos cuadrados */
 	width: 198px;
 	height: 198px;
 }
-
 #contenedorPuzzle {
 		
 		font-family:"pipomayu"
