Finished contornos 4,5 and 6

--- a/minigames/numeros2/styles/style.css
+++ b/minigames/numeros2/styles/style.css
@@ -41,13 +41,13 @@
 		margin-left:1%;
 		position:absolute;
 	}
-   .invisible
+ /*  .invisible
     {
         left: 38.5%;
         position: absolute;
         visibility: hidden;
 		cursor: url(../images/estilo/paloma.gif),url(../images/estilo/paloma.ani),auto;
-    }
+    }		*/
 	/*botones*/
         .boton
         {
