--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @font-face
  {
     font-family: pipomayu;
-    src: url(../images/estilo/pipomayu.TTF);
+    src: url(../fonts/pipomayu.TTF);
 }
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video 
 { 
@@ -100,7 +100,8 @@ body
 /*ESTILOS DEL MENU DE LOS ALMNOS*/
 #loginninos
 { 
-    background: #fefcea; /* Old browsers */
+    font-family:pipomayu;
+	background: #fefcea; /* Old browsers */
     background: -moz-linear-gradient(top,  #fefcea 0%, #f2e98d 100%); /* FF3.6+ */
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fefcea), color-stop(100%,#f2e98d)); /* Chrome,Safari4+ */
     background: -webkit-linear-gradient(top,  #fefcea 0%,#f2e98d 100%); /* Chrome10+,Safari5.1+ */
@@ -112,10 +113,7 @@ body
 img.edad
 {
     padding:3%;
-}
-img.edad:hover
-{
-    width:210px;
+	margin-top:35%;
 }
 /*ESTILOS DE LOS RECORRIDOS */
 	#primer
