--- a/css/style.css
+++ b/css/style.css
@@ -137,8 +137,13 @@ div.ninos
 }
 img.ninos
 {
-    width:30%;
-    height:80%;
+	width:40%;
+    padding:1%;
+}
+img.visor
+{
+	height:99%;
+	width:50%;
     padding:1%;
 }
 td.ninos { height:130px; }
